# Big-data-Analytics

./: LICENSE  README.md  docker-compose.yaml  pyproject.toml
assets/: Data-Collection.md  Data-Preprocessing.md  Introduction.md
data/: keywords_nvidia.txt
postgres-data/base/1/: 1247_vm  1249  1259  1259_vm  13396  13396_vm  13400  13405  13411_vm  13415  2603_vm  2606_vm  2608_vm  2609  2610_vm  2615  2617_vm  2619  2619_vm  2653  2654  2655  2656  2657  2658  2662  2663  2664  2667  2674  2680  2681  2684  2688  2691  2692  2693  2696  2699  2702  (+30 more)
postgres-data/base/4/: 1247  1249_vm  1255  1255_vm  1259  13401  13401_vm  13406  13410  13411  2187  2579  2601_vm  2602_vm  2605_vm  2606  2608  2609_vm  2610  2615_vm  2618  2619  2619_vm  2650  2652  2659  2660  2661  2665  2666  2668  2669  2673  2678  2679  2683  2696  2756  2831  2835  (+23 more)
postgres-data/base/5/: 1247  1247_vm  1249  1249_fsm  1249_vm  1259  1259_vm  13406_vm  16387  16388  16388_fsm  16388_vm  16393  16394  16394_fsm  16473  16474  16474_fsm  16474_vm  16479  16480  16482  16483  16483_fsm  16483_vm  16488  16489  (+89 more)
postgres-data/global/: 1213_vm  1232  1233  1260  1260_fsm  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  2847  2965  2967  3593  4061  4176  4178  4182  4184  4186  6001  6002  6245  6246  6247  6302  6303  pg_control  pg_internal.init
postgres-data/pg_serial/: .gitignore
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/: custom_enums.py  db_creator.py  entities.py  models.py  parser.py  settings.py
